[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/images/user_interface/TextureProgress/hpOver.png" type="Texture" id=1]
[ext_resource path="res://assets/images/user_interface/TextureProgress/hpProgress.png" type="Texture" id=2]
[ext_resource path="res://assets/images/user_interface/TextureProgress/boostOver.png" type="Texture" id=3]
[ext_resource path="res://assets/images/user_interface/TextureProgress/boostProgress.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/OCRAEXT.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://user_interface/playerUI/playerUI.gd" type="Script" id=6]
[ext_resource path="res://assets/images/user_interface/TextureProgress/staminaBarOver.png" type="Texture" id=7]
[ext_resource path="res://assets/images/user_interface/TextureProgress/staminaBarProgress.png" type="Texture" id=8]
[ext_resource path="res://assets/images/user_interface/TextureProgress/staminaBarUnder.png" type="Texture" id=9]
[ext_resource path="res://assets/images/user_interface/TextureButtons/menu_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/images/user_interface/TextureButtons/menu_button_hovered.png" type="Texture" id=11]
[ext_resource path="res://assets/images/user_interface/TextureButtons/menu_button_normal.png" type="Texture" id=12]
[ext_resource path="res://assets/images/icons/wave_flag.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/OCRAEXT.TTF"

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 34
use_filter = true
font_data = ExtResource( 5 )

[node name="playerUICanvas" type="CanvasLayer"]
layer = 0
script = ExtResource( 6 )

[node name="playerUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="playerUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="playerUI/NinePatchRect"]
margin_left = 8.0
margin_top = 8.0
margin_right = 284.0
margin_bottom = 54.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="playerUI/NinePatchRect/VBoxContainer"]
margin_right = 284.0
margin_bottom = 24.0
rect_min_size = Vector2( 284, 24 )

[node name="HP" type="TextureProgress" parent="playerUI/NinePatchRect/VBoxContainer/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -12.0
margin_right = 142.0
margin_bottom = 12.0
mouse_filter = 2
max_value = 250.0
value = 234.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="playerUI/NinePatchRect/VBoxContainer/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -8.5
margin_right = 20.0
margin_bottom = 8.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.74902, 0.745098, 0.8, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "HP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="playerUI/NinePatchRect/VBoxContainer"]
margin_top = 28.0
margin_right = 284.0
margin_bottom = 46.0
rect_min_size = Vector2( 284, 18 )

[node name="Boost" type="TextureProgress" parent="playerUI/NinePatchRect/VBoxContainer/NinePatchRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -142.0
margin_right = 142.0
margin_bottom = 16.0
max_value = 250.0
value = 250.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="playerUI/NinePatchRect/VBoxContainer/NinePatchRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.5
margin_top = -7.0
margin_right = 16.5
margin_bottom = 7.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.74902, 0.745098, 0.8, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "BOOST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect3" type="NinePatchRect" parent="playerUI/NinePatchRect/VBoxContainer"]
margin_top = 50.0
margin_right = 284.0
margin_bottom = 62.0
rect_min_size = Vector2( 284, 12 )

[node name="Stamina" type="TextureProgress" parent="playerUI/NinePatchRect/VBoxContainer/NinePatchRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -6.0
margin_right = 142.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 12 )
mouse_filter = 2
max_value = 250.0
value = 234.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="playerUI/NinePatchRect/VBoxContainer/NinePatchRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -8.5
margin_right = 35.0
margin_bottom = 8.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "STAMINA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="playerUI/NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 8.0
margin_right = 144.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "0"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveCounter" type="HBoxContainer" parent="playerUI/NinePatchRect"]
margin_left = 704.0
margin_top = 16.0
margin_right = 896.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="playerUI/NinePatchRect/WaveCounter"]
margin_right = 32.0
margin_bottom = 48.0
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="playerUI/NinePatchRect/WaveCounter"]
margin_left = 36.0
margin_top = 5.0
margin_right = 180.0
margin_bottom = 42.0
rect_min_size = Vector2( 144, 0 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "0"
valign = 1

[node name="TextureButton" type="TextureButton" parent="playerUI/NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="playerUI/NinePatchRect/TextureButton" to="." method="_on_TextureButton_pressed"]
